# nl-sql-agent

./: .env.example  .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
scripts/: start_services.sh
src/nl_sql_agent/: __init__.py  __main__.py  agent.py  cli.py  config.py  downloader.py  evaluator.py  judge.py  scoring.py  spider.py  sql_safety.py  sqlite_tools.py  tracing.py  web.py
tests/: test_agents_sdk_usage.py  test_cli.py  test_downloader.py  test_judge.py  test_marked_eval.py  test_prune_spider.py  test_scoring.py  test_spider.py  test_sql_safety.py  test_sqlite_tools.py  test_tracing.py  test_web.py
ui/: index.html  package.json
ui/src/: main.tsx  styles.css
